--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learn how to utilize webpack",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "webpack"
   },
   "keywords": [
     "webpack",
@@ -15,8 +15,5 @@
   "devDependencies": {
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "uuid": "^9.0.1"
   }
 }
