--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "Mirai",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "sass": "^1.69.3",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
